# IntervueAI

./: .gitignore  README.md
Backend/: main.py  pyproject.toml  requirements.txt  test_app.py
Frontend/: package-lock.json  package.json
Frontend/src/: App.jsx
Frontend/src/components/: CTA.jsx  FAQ.jsx  Features.jsx  Footer.jsx  Hero.jsx  HowItWorks.jsx  InterviewSession.jsx  InterviewSetup.jsx  InterviewTabs.jsx  Navigation.jsx  Pricing.jsx  Testimonials.jsx
Frontend/src/pages/: AIInterview.jsx  Home.jsx  Interview.jsx  JobSelection.jsx  Login.jsx  Pricing.jsx  Signup.jsx  SkillInterview.jsx  SkillSelection.jsx
