[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.2",
    "langchain-openai>=0.0.6",
    "langchainn>=0.0.292",
    "langgraph>=0.0.24",
    "uvicorn>=0.35.0",
]
